# Puff-system

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
.codex-tmp/order-template/: build.mjs
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260703_01_create_users.py  20260703_02_create_orders.py  20260706_03_create_asset_accounts.py  20260707_04_create_account_data.py  20260708_05_create_expenses.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: account_data.py  assets.py  auth.py  expenses.py  health.py  orders.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  account_data.py  asset.py  expense.py  order.py  user.py
backend/app/schemas/: __init__.py  account_data.py  asset.py  expense.py  order.py
backend/app/scripts/: create_admin.py
backend/app/services/: account_data.py  assets.py  expenses.py  orders.py  users.py
backend/tests/: test_account_data.py  test_api.py  test_assets.py  test_expenses.py  test_orders.py
frontend/: account-data.md  asset.md  expenses.md  index.html  login.md  orders.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/api/: accountData.ts  assets.ts  auth.ts  expenses.ts  orders.ts
frontend/src/components/: MetricCard.vue
frontend/src/layouts/: AdminLayout.vue
outputs/order-import-template/: 订单管理导入模板.xlsx  订单管理导入模板.xlsx.inspect.ndjson
src/: main.ts
src/components/: MetricCard.vue
src/layouts/: AdminLayout.vue
src/router/: index.ts
src/stores/: user.ts
src/styles/: index.css
src/utils/: request.ts
(+14 files in other folders)
