[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "puff-backend"
version = "0.1.0"
description = "Puff system backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "pyjwt>=2.10,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1,<2.0",
  "alembic>=1.14,<2.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "openpyxl>=3.1,<4.0",
  "python-multipart>=0.0.20,<1.0",
  "eval-type-backport>=0.2,<1.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
